# engram

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  share_your_setup.yml
.github/workflows/: ci.yml  release.yml
demo/: README.md  app.js  docs.html  index.html  styles.css
demo/wiki/: beliefs.html  brain.html  cli.html  connect.html  consolidation.html  decisions.html  faq.html  get-context.html  graph.html  index.html  installation.html  memories.html  obsidian-okf.html  projects.html  safety.html  search.html  sleep.html  time-travel.html  tools.html  troubleshooting.html
demo/wiki-src/: beliefs.md  brain.md  cli.md  connect.md  consolidation.md  decisions.md  faq.md  get-context.md  graph.md  index.md  installation.md  memories.md  obsidian-okf.md  projects.md  safety.md  search.md  sleep.md  time-travel.md  tools.md  troubleshooting.md
docs/: multi-device-setup.md
engram/: __init__.py  beliefs.py  graph.py  procedural.py  reflect.py  server.py  store.py  web.py
scripts/: backup-brain.sh  build-wiki.py  deploy-site.sh  setup-device.sh  with-venv.sh
tests/: conftest.py  test_cli.py  test_constellation.py  test_doctor.py  test_mdio.py  test_migrations.py  test_store.py  test_tools.py  test_zz_obsidian.py  test_zz_phase4.py  test_zz_portability.py  test_zz_sleep.py  test_zz_wiki.py
wadachi/: __init__.py  beliefs.py  cli.py  doctor.py  entities.py  graph.py  log.py  mdio.py  obsidian.py  portability.py  procedural.py  reflect.py  search.py  server.py  store.py  web.py
wadachi/migrations/: 0002_access_tracking.py
