[project]
name = "engram"
version = "0.1.0"
description = "Persistent memory + semantic search MCP server for Claude Code & Desktop"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "memory", "ai", "claude", "semantic-search"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.4.0",
]
graph = [
    "graphifyy>=0.9.0",
]

[project.scripts]
engram = "engram.server:mcp.run"

[project.urls]
Repository = "https://github.com/eliacinti/engram"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engram*"]
