[project]
name = "wadachi"
version = "0.3.0"
description = "Wadachi (轍) — persistent memory + semantic search MCP server for AI agents. Formerly Engram."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "memory", "ai", "claude", "semantic-search", "wadachi"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
semantic = [
    "fastembed>=0.4.0",
]
graph = [
    "graphifyy>=0.9.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
wadachi = "wadachi.server:mcp.run"
# alias legacy: le config MCP esistenti che puntano a venv/bin/engram continuano a funzionare
engram = "wadachi.server:mcp.run"

[project.urls]
Repository = "https://github.com/EliaCinti/wadachi"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wadachi*"]
